<?xml version="1.0" encoding="utf-8"?><!--
    Copyright (c) 2016-2018 Onegini B.V.

    Licensed under the Apache License, Version 2.0 (the "License");
    you may not use this file except in compliance with the License.
    You may obtain a copy of the License at

    http://www.apache.org/licenses/LICENSE-2.0

    Unless required by applicable law or agreed to in writing, software
    distributed under the License is distributed on an "AS IS" BASIS,
    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
    See the License for the specific language governing permissions and
    limitations under the License.
    -->

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

  <TextView
      android:id="@+id/two_step_message"
      android:text="@string/two_way_otp_message"
      android:layout_width="wrap_content"
      android:layout_marginTop="@dimen/activity_login_logo_margin_top"
      android:layout_centerHorizontal="true"
      android:layout_height="wrap_content"
      style="@style/Base.TextAppearance.AppCompat.Headline" />

  <TextView
      android:id="@+id/two_step_challenge_code_label"
      android:text="@string/two_way_otp_challenge_code_label"
      android:layout_below="@id/two_step_message"
      style="@style/AuthenticatorMessageStyle" />

  <TextView
      android:id="@+id/two_step_challenge_code"
      android:layout_below="@id/two_step_challenge_code_label"
      android:layout_centerHorizontal="true"
      android:textSize="60sp"
      android:layout_margin="@dimen/activity_margin"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content" />

  <TextView
      android:id="@+id/two_step_response_code_label"
      android:text="@string/two_way_otp_response_code_label"
      android:layout_below="@id/two_step_challenge_code"
      style="@style/AuthenticatorMessageStyle" />

  <EditText
      android:id="@+id/two_step_response_code"
      android:layout_below="@id/two_step_response_code_label"
      android:layout_centerHorizontal="true"
      android:textSize="60sp"
      android:layout_margin="@dimen/activity_margin"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:inputType="number"
      android:textAlignment="center"
      android:minWidth="200dp"
      android:maxLines="1" />

  <LinearLayout
      android:layout_below="@id/two_step_response_code"
      android:layout_width="match_parent"
      android:layout_height="90dp"
      android:orientation="horizontal"
      android:paddingTop="0dip">

    <Button
        android:id="@+id/two_step_ok_button"
        style="@style/ButtonStyle"
        android:layout_width="0dip"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:textAlignment="center"
        android:text="@string/btn_ok_label" />

    <Button
        android:id="@+id/two_step_cancel_button"
        style="@style/ButtonStyle"
        android:layout_width="0dip"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:textAlignment="center"
        android:text="@string/btn_cancel_label" />
  </LinearLayout>
</RelativeLayout>
