<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:app="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:background="@color/dashboard_background"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        app:contentInsetLeft="0dp"
        app:contentInsetStart="0dp"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"
            android:text="@string/app_name"
            android:textColor="@color/white"
            android:layout_gravity="center"
            android:id="@+id/toolbar_title"/>

    </android.support.v7.widget.Toolbar>

    <android.support.v7.widget.CardView
        android:id="@+id/card_view"
        android:layout_margin="@dimen/activity_margin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        card_view:cardCornerRadius="4dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_margin="@dimen/activity_margin"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/dashboard_welcome_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/Base.TextAppearance.AppCompat.Headline"
                android:text="@string/welcome_user_text"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:id="@+id/tv_user_profile_info"
                android:layout_gravity="center_horizontal"
                android:lines="2"
                android:layout_marginTop="20dp"/>
            <Button
                android:id="@+id/button_get_user_profile"
                style="@style/ButtonStyle"
                android:text="@string/btn_get_user_profile_data_label"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="60dp"/>
            <Button
                android:id="@+id/button_logout"
                style="@style/ButtonStyle"
                android:layout_marginBottom="20dp"
                android:text="@string/btn_logout_label"/>
            <Button
                android:id="@+id/button_deregister_user"
                style="@style/ButtonStyle"
                android:layout_marginBottom="40dp"
                android:text="@string/btn_deregister_user_label"/>
        </LinearLayout>
    </android.support.v7.widget.CardView>
</LinearLayout>