<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:app="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:background="@color/background_for_activity_with_card_views"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        app:contentInsetLeft="0dp"
        app:contentInsetStart="0dp"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"
            android:text="@string/settings_title"
            android:textColor="@color/white"
            android:layout_gravity="center"
            android:id="@+id/toolbar_title"/>

    </android.support.v7.widget.Toolbar>

    <android.support.v7.widget.CardView
        android:id="@+id/card_view"
        android:layout_margin="@dimen/activity_margin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        card_view:cardCornerRadius="4dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_margin="@dimen/activity_margin"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Button
                android:id="@+id/button_mobile_authentication"
                style="@style/ButtonStyle"
                android:layout_marginTop="40dp"
                android:text="@string/settings_mobile_enrollment_off"/>
            <Button
                android:id="@+id/button_change_pin"
                style="@style/ButtonStyle"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="40dp"
                android:text="@string/settings_change_pin"/>

        </LinearLayout>
    </android.support.v7.widget.CardView>
</LinearLayout>