<?xml version="1.0" encoding="utf-8"?>
<!--
  Copyright (c) 2016-2017 Onegini B.V.

  Licensed under the Apache License, Version 2.0 (the "License");
  you may not use this file except in compliance with the License.
  You may obtain a copy of the License at

      http://www.apache.org/licenses/LICENSE-2.0

  Unless required by applicable law or agreed to in writing, software
  distributed under the License is distributed on an "AS IS" BASIS,
  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  See the License for the specific language governing permissions and
  limitations under the License.
  -->

<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include
        android:id="@+id/welcome_user_text"
        layout="@layout/view_welcome_user_text"/>

    <TextView
        android:id="@+id/authenticator_message"
        android:text="@string/confirm_with_fingerprint"
        android:layout_below="@id/welcome_user_text"
        style="@style/AuthenticatorMessageStyle"/>

    <LinearLayout
        android:id="@+id/content_fingerprint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/authenticator_message"
        android:layout_marginTop="64dp"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        tools:ignore="UseCompoundDrawables">

        <TextView
            android:id="@+id/action_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-medium"
            android:text="@string/scan_fingerprint"
            android:textColor="@color/dark_text"
            android:textSize="20sp"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="24dp"
            android:src="@drawable/ic_fp_40px"
            android:contentDescription="@string/scan_fingerprint"/>

    </LinearLayout>

    <include
        layout="@layout/view_auth_accept_deny_buttons"
        android:layout_below="@+id/content_fingerprint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:orientation="vertical">
    <Button
        android:id="@+id/fallback_to_pin_button"
        style="@style/ButtonStyle"
        android:layout_marginBottom="24dp"
        android:text="@string/use_pin_authentication"/>

    <include layout="@layout/cancel_button"/>

    </LinearLayout>
</RelativeLayout>