<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/tools"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        app:contentInsetLeft="0dp"
        app:contentInsetStart="0dp"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"
            android:text="@string/settings_title"
            android:textColor="@color/white"
            android:layout_gravity="center"
            android:id="@+id/toolbar_title"/>

    </android.support.v7.widget.Toolbar>

    <RelativeLayout
        android:id="@+id/settings_authenticator_selector"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="32dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/settings_authentication_method"
            android:layout_centerVertical="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="16dp"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="@color/blue"/>

        <TextView
            android:id="@+id/settings_authenticator_selector_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="PIN"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="16dp"
            android:textAppearance="?android:attr/textAppearanceMedium"/>

    </RelativeLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/settings_authenticators_possible_authenticators"
        android:layout_margin="16dp"
        android:textSize="16sp"
        android:textStyle="bold"
        android:textColor="@color/blue"/>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/authenticators_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:listitem="@layout/row_item_authenticator"/>

</LinearLayout>